# qr-system

./: .env.example  Cargo.toml  README.md  schema.sql  setup.sh
certs/: cert.pem  key.pem
src/: main.rs
static/: admin.html  change-password.html  detail.html  login.html  scan.html
