[package]
name = "qr-system"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "mysql", "chrono", "macros"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
